tests/NormalTests/paczka1/fuzzy1/18889997.err
Error in line 10: dEWcU S432 36,2
Error in line 26: f8W2 S808 22,9
Error in line 29: oeUk3KV A569 7,7
Error in line 33: dEWcU S310 77,6
